--- a/manifests/deploymentservice.yaml
+++ b/manifests/deploymentservice.yaml
@@ -18,3 +18,17 @@ spec:
           name: test-cicd
           ports:
             - containerPort: 3000
+
+            
+apiVersion: v1
+kind: Service
+metadata:
+  name: cicd-demo
+spec:
+  selector:
+    app: test-cicd
+  type: LoadBalancer
+  ports:
+   -  protocol: TCP
+      port: 80
+      targetPort: 3000            
